# comp3-project

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
src/: Makefile  Makefile.Android  entities.cpp  game_map.cpp  map_parts.cpp  raylib_game.cpp  screen_editor.cpp  screen_ending.cpp  screen_gameplay.cpp  screen_logo.cpp  screen_options.cpp  screen_title.cpp
src/entities/: player.cpp
src/include/: entities.hpp  exprtk.hpp  game_map.hpp  iconset.rgi.h  map_parts.hpp  screens.h
src/resources/: LICENSE
src/resources/levels/: base0.cm  lvl0.cm  lvl1.cm
